Fix theme switcher to show the correct state on mobile.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -300,6 +300,6 @@ th code {
   content: "🌑";
 }
 
-.prefers-dark-switch input+label:hover::after {
+.prefers-dark-switch input+label:active::after {
   content: "🌗";
 }
